--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -11,9 +11,9 @@
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "45.0",
-    "packageAliases": {
-        "dreamhouse": "0Ho1I000000XZDVSA4",
-        "dreamhouse@2.0.0-4": "04t1I0000036seVQAQ",
-        "dreamhouse@3.0.0-5": "04t1I0000036u98QAA"
+  "packageAliases": {
+   "dreamhouse": "0Hoxxx",
+   "dreamhouse@1.0.0-1": "04txxx"
+}
     }
 }
