--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -12,8 +12,8 @@
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "45.0",
   "packageAliases": {
-   "dreamhouse": "0Hoxxx",
-   "dreamhouse@1.0.0-1": "04txxx"
+   "dreamhouse": "0Ho2v000000blQ5CAI",
+   "dreamhouse@1.0.0-1": "08c2v000000KywjAAC"
 }
     }
 }
