--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -13,7 +13,7 @@
     "sourceApiVersion": "45.0",
   "packageAliases": {
    "dreamhouse": "0Ho2v000000blQ5CAI",
-   "dreamhouse@1.0.0-1": "08c2v000000KywjAAC"
+   "dreamhouse@1.0.0-1": "04t2v000002EmwPAAS"
 }
     }
 }
