--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -12,6 +12,7 @@
    "sfdcLoginUrl": "https://login.salesforce.com",
    "sourceApiVersion": "45.0",
    "packageAliases": {
-      "dreamhouse": "0Ho2v000000blQ5CAI"
+      "dreamhouse": "0Ho2v000000blQ5CAI",
+      "dreamhouse@1.0.0-1": "04t2v000002En8sAAC"
    }
 }
