--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -12,7 +12,7 @@
    "sfdcLoginUrl": "https://login.salesforce.com",
    "sourceApiVersion": "45.0",
    "packageAliases": {
-      "dreamhouse": "08c2v000000KywtAAC",
+      "dreamhouse": "0Ho2v000000blQ5CAI",
       "dreamhouse@1.0.0-1": "04t2v000002En8xAAC"
    }
 }
