--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -13,6 +13,6 @@
    "sourceApiVersion": "45.0",
    "packageAliases": {
       "dreamhouse": "0Ho2v000000blQ5CAI",
-      "dreamhouse@1.0.0-1": "04t2v000002En8xAAC"
+      "dreamhouse@1.0.0-1": "04t2v000002ElT0AAK"
    }
 }
